# opentak

./: README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: check-doc.yml  ci.yml  deploy.yaml  publish-doc.yml  python-ci.yml
docs/: index.md
opentak/: example.py
scripts/: gen_ref_pages.py
tests/: test_example.py
